[project]
name = "tonpay"
description = "Simple type checking and type conversion library"
version = "0.0.1"
authors = [
    { name = "Arterialist", email = "arterialist@thetonpay.app" }
]
dependencies = []
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TheTonpay/tonpay-python-sdk"
"Bug Tracker" = "https://github.com/TheTonpay/tonpay-python-sdk/issues"
"Documentation" = "https://tonpay.gitbook.io/tonpay-sdk/"
"Technical Support" = "https://t.me/+zdOo27FJZgg0ZGUy"
"Website" = "https://thetonpay.app/"
"Merchant Portal" = "https://business.thetonpay.app/"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"